[gd_scene load_steps=7 format=3 uid="uid://nxejjx6lux6y"]

[ext_resource type="Texture2D" uid="uid://vmu6jsjd5oew" path="res://sprites/backgrounds/street.png" id="1_dn72j"]
[ext_resource type="Script" uid="uid://bcv3mqukfc5g6" path="res://scripts/scenes/battle.gd" id="1_lpir7"]
[ext_resource type="Script" uid="uid://b56rnmt62xd1s" path="res://scripts/combat/turn_manager.gd" id="2_th188"]
[ext_resource type="PackedScene" uid="uid://8ic7nydh8por" path="res://scenes/characters/metalgirl.tscn" id="3_p1qf1"]
[ext_resource type="PackedScene" uid="uid://csikcb3fhm55e" path="res://scenes/cards/hand.tscn" id="4_a12nh"]
[ext_resource type="Theme" uid="uid://cfos3mcmwvlb3" path="res://themes/theme.tres" id="6_6vh42"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_lpir7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, -180)
scale = Vector2(2, 2)
texture = ExtResource("1_dn72j")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -360)
anchor_mode = 0
editor_draw_limits = true

[node name="Player" parent="." instance=ExtResource("3_p1qf1")]
position = Vector2(106, -118)

[node name="TurnManager" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_th188")
player = NodePath("../Player")
metadata/_custom_type_script = "uid://b56rnmt62xd1s"

[node name="Hand" parent="." instance=ExtResource("4_a12nh")]
offset_left = 76.0
offset_top = -73.0
offset_right = 478.0
offset_bottom = -1.0
scale = Vector2(1.16, 1)

[node name="DrawButton" type="Button" parent="."]
offset_left = 515.0
offset_top = -118.0
offset_right = 631.0
offset_bottom = -87.0
theme = ExtResource("6_6vh42")
text = "Robar cartas"

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 515.0
offset_top = -80.0
offset_right = 631.0
offset_bottom = -49.0
theme = ExtResource("6_6vh42")
text = "Acabar turno"

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = -342.0
offset_right = 95.0
offset_bottom = -319.0
theme = ExtResource("6_6vh42")
text = "Descarte"

[node name="DiscardCounter" type="Label" parent="."]
offset_left = 106.0
offset_top = -342.0
offset_right = 146.0
offset_bottom = -319.0
theme = ExtResource("6_6vh42")
text = "0"

[node name="Label2" type="Label" parent="."]
offset_left = 16.0
offset_top = -318.0
offset_right = 95.0
offset_bottom = -295.0
theme = ExtResource("6_6vh42")
text = "Robo"

[node name="DrawCounter" type="Label" parent="."]
offset_left = 106.0
offset_top = -319.0
offset_right = 146.0
offset_bottom = -296.0
theme = ExtResource("6_6vh42")
text = "0"

[node name="Label3" type="Label" parent="."]
offset_left = 16.0
offset_top = -295.0
offset_right = 56.0
offset_bottom = -272.0
theme = ExtResource("6_6vh42")
text = "Mano"

[node name="HandCounter" type="Label" parent="."]
offset_left = 106.0
offset_top = -295.0
offset_right = 146.0
offset_bottom = -272.0
theme = ExtResource("6_6vh42")
text = "0"

[connection signal="ended_player_turn" from="Player" to="." method="_on_player_ended_player_turn"]
[connection signal="no_enemies_left" from="TurnManager" to="." method="_on_no_enemies_left"]
[connection signal="round_ended" from="TurnManager" to="." method="_on_round_ended"]
[connection signal="round_started" from="TurnManager" to="." method="_on_round_started"]
[connection signal="turn_ended" from="TurnManager" to="." method="_on_turn_manager_turn_ended"]
[connection signal="turn_start" from="TurnManager" to="." method="_on_turn_manager_turn_start"]
[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_pressed"]
